--- a/Vortex/Vortex.vcxproj.filters
+++ b/Vortex/Vortex.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClInclude Include="src\Vortex\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Vortex\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Vortex\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Vortex\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
